# netbox-proxbox

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CERTIFICATION.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOP.md  FASTAPI.md  README.md  TODO_L_PLAYWRIGHT.md  generate_proxbox_cli_docs.py  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  reinstall.sh  requirements-docs.txt  requirements-new.txt  requirements.txt  setup.py  sitemap.xml
.gitea/workflows/: ci.yml  deploy-production.yml  mirror-github.yml  publish-gitea.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  django-tests.yml  docs-screenshots.yml  docs.yml  e2e-docker.yml  nightly-contracts.yml  notify-profile.yml  page-coverage.yml  publish-testpypi.yml  pypi.yml  python-package.yml
api/: index.html
api/endpoints/: index.html
api/firecracker/: index.html
api/ha/: index.html
application-packet/: index.html
backend/: index.html
certification/: index.html
cli/: index.html
companion-plugins/: index.html
configuration/: index.html
contracts/: proxbox_api_sse_schema.json
contrib/: proxbox.service
docs/: application-packet.md  certification.md  hooks.py  index.md  roadmap.md
installation/: docker-compose-single-exec.yml  index.html
netbox_ceph/: MANIFEST.in  README.md  pyproject.toml
netbox_ceph/netbox_ceph/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  navigation.py  tables.py  urls.py  views.py
netbox_ceph/netbox_ceph/api/: serializers.py  urls.py  views.py
netbox_ceph/netbox_ceph/migrations/: 0001_initial.py
netbox_ceph/netbox_ceph/models/: __init__.py  ceph.py
netbox_ceph/netbox_ceph/services/: __init__.py  branch_lifecycle.py  http_client.py
netbox_ceph/netbox_ceph/templates/netbox_ceph/: home.html
netbox_packer/: MANIFEST.in  README.md  pyproject.toml
netbox_packer/netbox_packer/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  navigation.py  tables.py  urls.py  views.py
netbox_packer/netbox_packer/api/: __init__.py  serializers.py  urls.py  views.py
netbox_packer/netbox_packer/migrations/: 0001_initial.py  0002_iso_builder_fields.py
netbox_packer/netbox_packer/models/: __init__.py  build.py  definition.py  settings.py
netbox_packer/netbox_packer/services/: __init__.py  http_client.py
netbox_packer/netbox_packer/templates/netbox_packer/: packerimagebuild.html  packerimagebuild_list.html  packerimagedefinition.html  packerimagedefinition_edit.html  packerimagedefinition_list.html  packerpluginsettings_edit.html
netbox_packer/tests/: netbox_test_configuration.py  test_api.py  test_models.py
netbox_pbs/: MANIFEST.in  README.md  pyproject.toml
netbox_pbs/netbox_pbs/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_pbs/netbox_pbs/api/: __init__.py  serializers.py  urls.py  views.py
netbox_pbs/netbox_pbs/migrations/: 0001_initial.py  0002_pbs_domain_models.py  __init__.py
netbox_pbs/netbox_pbs/models/: __init__.py  pbs.py  pbs_backup_group.py  pbs_datastore.py  pbs_endpoint.py  pbs_job_status.py  pbs_node.py  pbs_snapshot.py  plugin_settings.py
netbox_pbs/netbox_pbs/services/: __init__.py  branch_lifecycle.py  http_client.py
netbox_pbs/netbox_pbs/templates/netbox_pbs/: home.html
netbox_pbs/netbox_pbs/templates/netbox_pbs/inc/: pbssnapshot_vm_backups_panel.html  vmbackup_pbs_snapshots_panel.html
netbox_pbs/tests/: test_api_contract.py  test_branch_lifecycle.py  test_domain_models.py  test_jobs.py  test_plugin_boots.py  test_template_content.py  test_views_and_urls.py
netbox_proxbox/: CLAUDE.md  __init__.py  bug_report.py  choices.py  constants.py  fields.py  filtersets.py  forms.py  github.py  jobs.py  models.py  navigation.py  netbox_bootstrap.py  release.py  schedule_hints.py  signal_receivers.py  signals.py  sync_ownership.py  sync_params.py  sync_stages.py  sync_types.py  tables.py  template_content.py  type_defs.py  urls.py  utils.py  views.py  websocket_client.py  widgets.py
proxbox_api/: __init__.py  database.db  database.py  main.py  pyproject.toml
proxbox_cli/: CLAUDE.md  README.md  __init__.py  __main__.py  _locate_manage.py  client.py  config.py  docgen_capture.py  runtime.py  support.py
proxbox_scheduler/: Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
proxbox_scheduler/proxbox_scheduler/: __init__.py  __main__.py  config.py  cron.py  invoker.py  logging_config.py  runner.py
proxbox_scheduler/tests/: conftest.py  test_config.py  test_cron.py  test_invoker.py  test_runner.py
reference/: EDGEUNO-FORK-VALID-TO-IMPLEMENT.md  EDGEUNO-NETBOX-PROXMOX.md  IMPLEMENTATION-ROADMAP.md  NETBOX-BRANCHING.md  NETBOX-PROXMOX-AUTOMATION.md  PROXBOX-AND-PROXMOX-AUTOMATION.md  PROXBOX-FORK-EDGEUNO.md  PROXMOX-AUTOMATION-VALID-TO-IMPLEMENT.md
release-notes/: index.html
roadmap/: index.html
scheduler/: index.html
scripts/: capture_screenshots.py
search/: search_index.json
standalone/: package-lock.json  package.json
tasks/: todo.md
tests/: CLAUDE.md  __init__.py  conftest.py  django_stubs.py  netbox_test_configuration.py  test_api_cluster.py  test_api_ha.py  test_api_netbox_integration.py  test_api_sdn.py  test_api_source_contracts.py  test_audit_log_emits.py  test_backend_integration.py  test_backend_key_adoption.py  test_backend_key_adoption_django.py  test_backend_logs_view.py  test_backend_proxy_credential_binding.py  test_backend_sync_placement.py  test_backend_version.py  test_backup_replication_views.py  test_bootstrap_intent_cfs.py  test_branch_lifecycle.py  test_branch_merge.py  test_bug_report.py  test_build_pve_template.py  test_cards.py  test_ceph_branch_lifecycle.py  test_ceph_http_client.py  test_ceph_jobs.py  test_ceph_migration.py  test_ceph_package.py  test_ceph_version.py  test_cli_contracts.py  test_cli_sync.py  test_cloud_customer_network_settings.py  test_cloud_image_template.py  test_dashboard.py  test_datacenter_models.py  test_deletion_request_approve.py  test_deletion_request_executor.py  test_deletion_request_state_guards.py  (+153 more)
(+863 files in other folders)
