[project]
name = "netbox-proxbox"
version = "0.0.7"
description = "Netbox Plugin - Integrate Proxmox and Netbox"
readme = "README.md"
authors = [
    {name = "Emerson Felipe", email = "emersonfelipe.2003@gmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "invoke>=2.2.1",
    "pylint>=4.0.5",
    "pylint-django>=2.7.0",
    "pydocstyle>=6.3.0",
    "yamllint>=1.38.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netbox_proxbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
