[project]
name = "netbox-proxbox"
version = "0.0.9.post4"
description = "Netbox Plugin - Integrate Proxmox and Netbox"
readme = "README.md"
authors = [
    {name = "Emerson Felipe", email = "emersonfelipe.2003@gmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.33.0",
    "websockets>=16.0",
]

[project.scripts]
pxb = "proxbox_cli:main"

[project.optional-dependencies]
cli = [
    "aiohttp>=3.12.15",
    "click>=8.3.0",
    "PyYAML>=6.0.3",
    "rich>=14.1.0",
    "typer>=0.19.2",
]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "invoke>=2.2.1",
    "pylint>=4.0.5",
    "pylint-django>=2.7.0",
    "pydocstyle>=6.3.0",
    "yamllint>=1.38.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
e2e = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netbox_proxbox", "proxbox_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["tests/test_api_netbox_integration.py", "tests/test_proxmox_export_view.py", "docs/generate_proxbox_cli_docs.py", "netbox_proxbox/migrations"]

[tool.ruff.lint]
select = ["E", "F", "W"]
# Enable ANN201/D103 incrementally on subpackages (e.g. netbox_proxbox/services/) when ready.
ignore = ["F403", "F401", "E501", "W293"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
