[project]
name = "netbox-proxbox"
version = "0.0.23.post1"
description = "Netbox Plugin - Integrate Proxmox and Netbox"
readme = "README.md"
authors = [
    {name = "Emerson Felipe", email = "emersonfelipe.2003@gmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "cryptography>=48.0.1",
    "pydantic>=2.13.3,<2.14.0",
    "requests>=2.33.0",
    "websockets>=16.0",
]

[project.scripts]
pxb = "proxbox_cli:main"

[project.urls]
Homepage = "https://github.com/emersonfelipesp/netbox-proxbox"
Documentation = "https://emersonfelipesp.github.io/netbox-proxbox/"
Source = "https://github.com/emersonfelipesp/netbox-proxbox"
Issues = "https://github.com/emersonfelipesp/netbox-proxbox/issues"

[project.optional-dependencies]
cli = [
    "aiohttp>=3.14.1",
    "click>=8.3.0",
    "PyYAML>=6.0.3",
    "rich>=14.1.0",
    "typer>=0.19.2",
]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "invoke>=2.2.1",
    "pre-commit>=4.0.0",
    "pylint>=4.0.5",
    "pylint-django>=2.7.0",
    "pydocstyle>=6.3.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a19",
    "yamllint>=1.38.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
e2e = [
    "fastapi>=0.136.1",
    "uvicorn>=0.35.0",
]
screenshot = [
    "playwright>=1.58.0",
    "requests>=2.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netbox_proxbox", "proxbox_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "django_db: requires pytest-django database access",
]

[tool.coverage.run]
branch = true
source = ["netbox_proxbox"]
omit = [
    "netbox_proxbox/migrations/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["tests/test_api_netbox_integration.py", "tests/test_proxmox_export_view.py", "docs/generate_proxbox_cli_docs.py", "netbox_proxbox/migrations"]

[tool.ruff.lint]
select = ["E", "F", "W"]
# Enable ANN201/D103 incrementally on subpackages (e.g. netbox_proxbox/services/) when ready.
ignore = ["F403", "F401", "E501", "W293"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
# Test modules that must call ``django.setup()`` before importing Django/NetBox
# symbols — E402 (module-level import not at top of file) is unavoidable.
"tests/test_operational_verbs_gate.py" = ["E402"]
"tests/test_proxmox_endpoint_ssh_credential_source.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "griffe>=2.0.2",
    "griffe-typingdoc>=0.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
]
