[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_ceph*"]

[project]
name = "netbox-ceph"
version = "0.0.1"
description = "NetBox plugin for read-only Ceph inventory through netbox-proxbox/proxbox-api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netbox-proxbox>=0.0.16",
    "requests>=2.33.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "C90"]
