[project]
name = "netbox-pbs"
version = "0.0.15"
description = "NetBox plugin — Proxmox Backup Server inventory and snapshot sync (read-only)"
readme = "README.md"
authors = [
    {name = "Emerson Felipe", email = "emersonfelipe.2003@gmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.13.3",
    "requests>=2.33.0",
]

[project.optional-dependencies]
proxbox = ["netbox-proxbox>=0.0.15"]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netbox_pbs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["netbox_pbs/migrations"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F403", "F401", "E501", "W293"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
