[project]
name = "proxbox-scheduler"
version = "0.0.15"
description = "Standalone container scheduler for periodic Proxbox sync (netbox-proxbox issue #372)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Emerson Felipe", email = "emersonfelipe.2003@gmail.com"}
]
dependencies = [
    "requests>=2.33.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[project.scripts]
proxbox-scheduler = "proxbox_scheduler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxbox_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["proxbox_scheduler"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
